<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_joke"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_saved"
            android:icon="@drawable/ic_save"
            android:title="@string/saved_jokes" />
        <item
            android:id="@+id/nav_viewed"
            android:icon="@drawable/ic_viewed"
            android:title="@string/viewed_jokes" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/apps"
                android:icon="@drawable/ic_apps"
                android:title="@string/apps" />
            <item
                android:id="@+id/about"
                android:icon="@drawable/ic_about"
                android:title="@string/about" />
            <item
                android:id="@+id/rate"
                android:icon="@drawable/ic_rate"
                android:title="@string/rate" />
            <item
                android:id="@+id/share_app"
                android:icon="@drawable/ic_share"
                android:title="@string/share" />
        </menu>
    </item>
</menu>