<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.HilarityJokes.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/color_primary_variant"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            app:popupTheme="@style/Theme.HilarityJokes.PopupOverlay">

            <ImageView
                android:id="@+id/nav_toggle"
                style="@style/IconStyle"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/menu"
                android:src="@drawable/ic_hamburger" />

            <TextView
                style="@style/ToolbarTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name" />

            <ImageView
                android:id="@+id/search_jokes"
                style="@style/IconStyle"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="end"
                android:contentDescription="@string/search_joke"
                android:src="@drawable/ic_search" />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:id="@+id/layout_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>