<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeFragment">

    <LinearLayout
        android:id="@+id/content_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:background="@drawable/curved_outline"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/button_show_random_joke"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="end"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageview_save_joke"
                style="@style/IconStyleBig"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/save"
                android:src="@drawable/ic_save" />

            <ImageView
                android:id="@+id/imageview_share_joke"
                style="@style/IconStyleBig"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/share"
                android:src="@drawable/ic_share" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <TextView
                android:id="@+id/textview_random_joke"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/insert_funny_joke_here"
                android:textColor="@color/color_primary_variant"
                android:textSize="20sp" />
        </ScrollView>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_show_random_joke"
        style="@style/ShowButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/curved_solid"
        android:gravity="center"
        android:text="@string/show_a_random_joke"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/content_layout"
        app:layout_constraintStart_toStartOf="@+id/content_layout"
        app:layout_constraintTop_toBottomOf="@+id/content_layout" />
</androidx.constraintlayout.widget.ConstraintLayout>