<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SearchActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.HilarityJokes.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/color_primary_variant"
            app:popupTheme="@style/Theme.HilarityJokes.PopupOverlay">

            <EditText
                android:id="@+id/search_jokes"
                style="@style/EdittextStyle"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="4dp"
                android:background="@drawable/curved_solid"
                android:imeOptions="actionSearch"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="text"
                android:labelFor="@id/search_jokes" />
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/searched_jokes_recyclerview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:background="@drawable/curved_outline"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar_layout" />

    <TextView
        android:id="@+id/text_no_searched_jokes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/no_searched_jokes"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/searched_jokes_recyclerview"
        app:layout_constraintEnd_toEndOf="@+id/searched_jokes_recyclerview"
        app:layout_constraintStart_toStartOf="@+id/searched_jokes_recyclerview"
        app:layout_constraintTop_toTopOf="@+id/searched_jokes_recyclerview" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imageview_search_previous"
            style="@style/IconStyle"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/left"
            android:src="@drawable/ic_left"
            app:tint="@color/color_primary_variant" />

        <TextView
            android:id="@+id/textview_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="1/1" />

        <ImageView
            android:id="@+id/imageview_search_next"
            style="@style/IconStyle"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/right"
            android:src="@drawable/ic_right"
            app:tint="@color/color_primary_variant" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>